fix: fixing some context-related errors, adding abstract context test suite