@@ -8,22 +8,23 @@ import at.ac.uibk.dps.cirrina.core.CoreException;
 import java.util.concurrent.Executors;
 import org.junit.jupiter.api.Test;
 
-class ContextTest {
+public abstract class ContextTest {
+
+  protected abstract Context createContext();
 
   @Test
   void testCreateAndGetContextVariable() {
-    var context = new InMemoryContext();
+    var context = createContext();
 
-    assertDoesNotThrow(() -> {
-      context.create("testVar", 42);
+    assertDoesNotThrow(() -> context.create("testVar", 42));
 
-      assertEquals(42, context.get("testVar"));
-    });
+    var v = assertDoesNotThrow(() -> context.get("testVar"));
+    assertEquals(42, v);
   }
 
   @Test
   void testCreateDuplicateVariable() {
-    var context = new InMemoryContext();
+    var context = createContext();
 
     assertDoesNotThrow(() -> context.create("testVar", 42));
     assertThrows(CoreException.class, () -> context.create("testVar", 42));
@@ -31,50 +32,76 @@ class ContextTest {
 
   @Test
   void testGetNonExistentVariable() {
-    var context = new InMemoryContext();
+    var context = createContext();
 
     assertThrows(CoreException.class, () -> context.get("nonExistentVar"));
   }
 
   @Test
-  void testSync() {
-    var context = new InMemoryContext();
+  void testAssign() {
+    var context = createContext();
 
     assertDoesNotThrow(() -> {
       context.create("testVar", 42);
       context.assign("testVar", 100);
-
-      assertEquals(100, context.get("testVar"));
     });
+
+    var v = assertDoesNotThrow(() -> context.get("testVar"));
+    assertEquals(100, v);
+  }
+
+  @Test
+  void testAssignNonExistentVariable() {
+    var context = createContext();
+
+    assertThrows(CoreException.class, () -> context.assign("nonExistentVar", 1));
+  }
+
+  @Test
+  void testDelete() {
+    var context = createContext();
+
+    assertDoesNotThrow(() -> {
+      context.create("testVar", 42);
+      context.delete("testVar");
+    });
+
+    assertThrows(CoreException.class, () -> context.get("testVar"));
+  }
+
+  @Test
+  void testDeleteNonExistentVariable() {
+    var context = createContext();
+
+    assertThrows(CoreException.class, () -> context.delete("nonExistentVar"));
   }
 
   @Test
   void testGetAll() {
-    var context = new InMemoryContext();
+    var context = createContext();
 
     assertDoesNotThrow(() -> {
       context.create("var1", 1);
       context.create("var2", "value2");
-
-      var allVariables = context.getAll();
-
-      assertEquals(2, allVariables.size());
     });
+
+    var allVariables = assertDoesNotThrow(context::getAll);
+    assertEquals(2, allVariables.size());
   }
 
   @Test
   void testMultiThreadedCreateGet() {
+    var context = createContext();
+
     final int threadCount = 100;
     final int iterationsPerThread = 1000;
-
-    var context = new InMemoryContext();
 
     try (var executorService = Executors.newFixedThreadPool(threadCount)) {
       for (int i = 0; i < threadCount; ++i) {
         executorService.submit(() -> {
           assertDoesNotThrow(() -> {
             for (int j = 0; j < iterationsPerThread; ++j) {
-              var variableName = Thread.currentThread().getId() + "_" + j;
+              var variableName = Thread.currentThread().threadId() + "_" + j;
 
               context.create(variableName, j);
               context.get(variableName);
@@ -84,11 +111,9 @@ class ContextTest {
       }
     }
 
-    assertDoesNotThrow(() -> {
-      var allVariables = context.getAll();
-      assertEquals(threadCount * iterationsPerThread, allVariables.size(),
-          "Incorrect number of variables in the context");
-    });
+    var allVariables = assertDoesNotThrow(context::getAll);
+    assertEquals(threadCount * iterationsPerThread, allVariables.size(),
+        "Incorrect number of variables in the context");
   }
 
   @Test
